tests/ui/diagnostic_namespace/do_not_recommend/supress_suggestions_in_help.next.stderr
error[E0277]: the trait bound `(): Foo` is not satisfied
  --> $DIR/supress_suggestions_in_help.rs:22:11
   |
LL |     check(());
   |     ----- ^^ the trait `Foo` is not implemented for `()`
   |     |
   |     required by a bound introduced by this call
   |
   = help: the trait `Foo` is implemented for `i32`
note: required by a bound in `check`
  --> $DIR/supress_suggestions_in_help.rs:19:18
   |
LL | fn check(a: impl Foo) {}
   |                  ^^^ required by this bound in `check`
help: use a unary tuple instead
   |
LL |     check(((),));
   |           +  ++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
